<resources>
    <string name="package_name">com.cynoteck.petofy</string>
    <string name="app_name">Petofy</string>
    <string name="username">Username, Email or Phone no.</string>
    <string name="password">Password</string>
    <string name="registration_password">Password*</string>
    <string name="login">Login</string>
    <string name="signin">SignIn</string>
    <string name="create_account">Not Registered yet?</string>
    <string name="signup">SignUp</string>
    <string name="fb">Login with Facebook</string>
    <string name="google">Login with Google</string>
    <string name="microsoft">Login with Microsoft</string>
    <string name="or">OR</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email">Email*</string>
    <string name="registration_username">Username*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="mandatory_fields">Please fill Mandatory fields</string>
    <string name="email_validation">Enter a valid email</string>
    <string name="password_equalization">Confirm Password is not same as Password</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="no_connection_message">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="facebook_app_id">1718881358347356</string>
    <string name="json_null_error">Some Error Occurred. Please try again.</string>
    <string name="fb_error">Facebook Error!</string>
    <string name="fb_login_cancelled">Login cancelled by user!</string>
    <string name="fb_login_unsuccessful">Login unsuccessful!</string>
    <string name="fb_login_successful">Login Successful!</string>
    <string name="category">Category</string>
    <string name="image_content_description">Image is not available</string>
    <string name="start_button_logo">GO</string>
    <string name="tag_line">Petofy Place for Pets\' Lover</string>
    <string name="search_text_hint">Search any product</string>
    <string name="remember_me">Remember me?</string>
    <string name="forget_password">Forget Password?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="seller_buyer">Seller or Buyer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="sample_user_name">Android Studio</string>
    <string name="sample_user_email">android.studio@android.com</string>

    <string name="server_error">There was some unexpected issue encountered.  Please try later.</string>
    <string name="pet_age_years_string">Years and</string>
    <string name="pet_age_months_string">Months</string>
    <string name="rupee">RS.</string>
    <string name="breed">Breed:</string>
    <string name="age">Age:</string>

    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
</resources>
