<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="@dimen/particular_pet_item_horizontal_margin"
    android:layout_marginRight="@dimen/particular_pet_item_horizontal_margin"
    android:layout_marginTop="@dimen/particular_pet_item_vertical_margin">

<RelativeLayout
    android:id="@+id/particularPetItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/particular_pet_item_horizontal_padding"
    android:paddingLeft="@dimen/particular_pet_item_horizontal_padding">


    <ImageView
        android:id="@+id/petImage"
        android:layout_width="70dp"
        android:layout_centerVertical="true"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        android:layout_marginRight="@dimen/particular_pet_item_views_margin"
        android:layout_marginEnd="@dimen/particular_pet_item_views_margin"
        android:contentDescription="@string/image_content_description" />

    <LinearLayout
        android:id="@+id/BreedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/petImage"
        android:layout_toEndOf="@+id/petImage"
        android:layout_marginTop="@dimen/particular_pet_item_views_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/petBreed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/particular_pet_item_views_horizontal_margin"
            android:layout_marginStart="@dimen/particular_pet_item_views_horizontal_margin"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BreedLayout"
        android:layout_toRightOf="@+id/petImage"
        android:layout_toEndOf="@+id/petImage"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/age"/>
        <TextView
            android:id="@+id/petAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/particular_pet_item_views_horizontal_margin"
            android:layout_marginStart="@dimen/particular_pet_item_views_horizontal_margin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/petImage"
        android:layout_toEndOf="@+id/petImage"
        android:orientation="horizontal"
        android:layout_below="@+id/ageLayout">
        <TextView
            android:id="@+id/petDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/pet_price_description_margin"
            android:layout_marginEnd="@dimen/pet_price_description_margin"
            android:singleLine="true" />
        <TextView
            android:id="@+id/petPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Rs 1000" />
    </LinearLayout>

</RelativeLayout>

</android.support.v7.widget.CardView>